Version 0.11 "Trinidad" -- Subversion
-----------------

* Added ability to set a media type for a stylesheet
* Added some database checks to installer.  Should help to
stop some install problems people are having.
* Added ability to link to an anchor with cms_selflink
* Added CSSMenu module and made it the default menu for new
installs
* Added id and class parameters to the cms_selflink tag
* Added apply button to editing HTML Blobs
* Added Japanese translation
* Added Polish translation
* Added Russian translation
* Added UninstallPreMessage() to module API
* Changed the default WYSIWYG to FCKeditorX
* Changed {content}, {html_blob} and {title} tags to be case
insensitive
* Changed logic of included htaccess so that html can be used
as the default extension for friendly urls
* Fixed a bug where additional content blocks would disappear
after a page was set inactive.  Fixed by adding a Load()
callback for content types.
* Fixed a bug with $gCms->variables['page_name'] not always
returning the alias
* Fixed a bug where IIS users couldn't login correctly
* Fixed a bug where IIS didn't always report QUERY_STRING, which
would generate a warning message
* Fixed a bug where all users can't get to user preferences
* Fixed a bug where css assocations did not get deleted when a
template does
* Fixed a few bugs with the css assocation page
* Fixed a few bugs with the News module
* Fixed a bug where debug mode would cause a warning error
* Fixed bug where deleting a user didn't delete their preferences
* Fixed bug with phplayers not displaying correctly if the body tag
of the template had any attributes
* Fixed bug where custom 404 message didn't show existing value
* Fixed bug with template/css associations not working properly on
Postgres
* Fixed bug with News content type where clicking on details would
link to the admin
* Swedish translation was incorrectly using se_SE instead of sv_SE
as it's locale name.
* Updated ADODB to 4.65